# ArUcoNavSystem

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  aruco.py  calibration.py  calibration_data.xml  database.sqlite  main.cpp  requirements.txt  test.html  utils.py  vcpkg.json
.VSCodeCounter/2023-07-13_13-16-02/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2023-07-17_16-59-01/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
marker/: marker.cpp  marker.h
navalgo/: navalgo.py
path_finding/: path_finder.cpp  path_finder.h
src/: Home.py  main.py  models.py  nodes_manager.py
src/aruco/: aruco.py
src/calibration/: calibration.py  interface.py
src/data/: database.py  models.py
src/interface/: calibration_manager.py
src/interface/pages/: 1_📐_Calibrator.py  2_📍_Node_Manager.py  3_🧪_Test_Live.py
src/navalgo/: navalgo.py
src/navigation/: navigation.py  test.py
src/pages/: 3_🧪_Test_Live.py  4_🏆_Real_Life_Test.py
src/simulator/: simulator.py
src/utils/: utils.py
test/: __init__.py  aruco_test.py  nav_test.py
